2005-10-19 John Luke <john.luke@gmail.com> 

	* *.cs: fix some warnings by removing unused fields
	
2005-10-19 Christian Hergert <christian.hergert@gmail.com>

	* MonoDevelop.SourceEditor/SourceViewService.cs: Check for a valid source
	languages manager before persisting settings to file.

2005-10-18 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	use new TreeNodeExists method instead of relying on an
	exception
	
2005-10-18 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Codons/EditActionCodon.cs:
	add all the current ModifierTypes in gdk 2.4
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	order using statements, remove ProcessPressEvent()
	combine UnIndentSelection and IndentSelection
	implement editactions instead of a bunch of switch
	statements to control the editor, mark some methods
	internal
	* MonoDevelop.SourceEditor.Actions/IEditAction.cs:
	add PassToBase property
	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs:
	move the default editing actions here as IEditActions
	* MonoDevelop.SourceEditor.Actions/EditActionCollection.cs:
	used to get unique IEditAction from a Gdk.Key and Gdk.ModifierType
	* MonoDevelop.SourceEditor.addin.xml: add EditActions
	* Makefile.am: add EditActionCollection and DefaultEditActions
	
2005-10-17 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	add InsertTemplate () method which handles the details for us
	and move the relevant code to it
	* MonoDevelop.SourceEditor.Codons/EditActionCodon.cs:
	MonoDevelop.SourceEditor.Actions/IEditAction.cs: update and implement
	for gdk key handling, they are still not used
	* MonoDevelop.SourceEditor.addin.xml: change InsertTemplate key to Tab
	
2005-10-11 John Luke <john.luke@gmail.com> 

	*  MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	make tab activate templates instead of space
	part of bug #55843
	
2005-10-11 John Luke <john.luke@gmail.com> 
